<resources>
    <string name="app_name">Device Locator</string>
    <string name="account_type">net.gmsworld</string>
    <string name="app_name_html">&lt;font color="#808080">Device Locator&lt;/font></string>
    <string name="message">Message from Device Locator installed on device %1$s</string>
    <string name="settings_card_title">Notification settings</string>
    <string name="detected_message_summary">Acknowledge that location command was received and send mobile data and GPS status.</string>
    <string name="gps_message_summary">GPS information - Accuracy, Latitude, Longitude, Speed, Altitude.</string>
    <string name="google_message_summary">Google maps link with your device current location.</string>
    <string name="acknowledgeMessage">Please wait for a while for response from %1$s. Please retry if no response in 3 minutes.</string>
    <string name="network">Internet:</string>
    <string name="gps">Location source:</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="location_mode_off">Disabled</string>
    <string name="location_battery_saving">Approximate</string>
    <string name="location_sensors_only">GPS only</string>
    <string name="location_high_accuracy">GPS and Network</string>
    <string name="accuracy">Accuracy:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="error_getting_location">GPS error. Device %1$s couldn\'t get the location. Please try again!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="approximate">Approximate</string>
    <string name="accurate">Accurate</string>
    <string name="read_contacts_permission">Can\'t select a contact without Read Contacts permission.</string>
    <string name="send_sms_permission">SMS permission is required to receive SMS notifications.</string>
    <string name="send_location_permission">Location permission is required to receive location notifications.</string>
    <string name="docsLink">Check all available commands &lt;a href="http://www.gms-world.net/dl">here&lt;/a></string>
    <string name="deviceIdText">Device id &lt;a href=\"https://www.gms-world.net/showDevice/%1$s\">%1$s&lt;/a></string>
    <string name="crash_error">An unexpected error occurred. Crash report has been sent to developer and the issue will be fixed soon!</string>
    <string name="security_pin">Your Security PIN</string>
    <string name="motion_radius">Notify me when device will move %1$d meters from present location</string>
    <string name="motion_confirm">You\'ll receive notification every time device will move %1$d meters from present location</string>
    <string name="motion_confirm_empty">Please setup Notification settings to receive notification every time device will move %1$d meters from present location</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="telegram_chat_id">Telegram id</string>
    <string name="share_route">Share route</string>
    <string name="device_tracker">Device tracker</string>
    <string name="sms_control">SMS commands</string>
    <string name="no_network_error">No network connection available! Please connect to networking service and retry.</string>
    <string name="verify_security_pin">Authenticate me at application startup using Security PIN</string>
    <string name="sms_manager_first_time_use">&lt;font color="#808080">On this screen you can enable SMS commands, manage your Security PIN, and select Location messages sent in reply to Locate command.&lt;br/>Do you want to enable now SMS commands on your device?&lt;/font></string>
    <string name="sms_manager_first_time_use_gp">&lt;font color="#808080">On this screen you can enable SMS commands, manage your Security PIN, and select Location messages sent in reply to Locate command.&lt;/font></string>
    <string name="download_full_app">&lt;font color="#808080">Due to Google Play security policy SMS commands are disabled in this version.&lt;br/>Do you want to download Full version supporting SMS commands?&lt;/font></string>
    <string name="device_manager_first_time_use">&lt;font color="#808080">On this screen you can register this device and list other devices registered with the same login. You can click on any device on the list and send command to it.&lt;/font></string>
    <string name="device_tracker_first_time_use">&lt;font color="#808080">On this screen you can set who should get notified when commands are executed on this device and enable device tracker which will record this device location.&lt;/font></string>
    <string name="register_device">&lt;font color="#808080">You have no registered devices. Do you want to register this device now?&lt;/font></string>
    <string name="permissions_first_time_use">&lt;font color="#808080">On this screen you can grant permissions required to execute commands on this device.&lt;/font></string>
    <string name="commands_enabled_prompt">&lt;font color="#808080">You can now send SMS commands to this device. Please note or change pin on Security PIN card and click Permissions button to grant permissions required to execute commands."&lt;/font></string>
    <string name="telegram_init_prompt">&lt;font color="#808080">Telegram id you provided seems to be wrong. Please click <b>OK</b> to find your Telegram id.&lt;/font></string>
    <string name="new_version_prompt">&lt;font color="#808080">New Device Locator version is available. Do you want to download it now?&lt;/font></string>
    <string name="pin_length_error">Security PIN must have at least 4 digits! Reverting to previous value…</string>
    <string name="enter_security_pin">Enter Security PIN</string>
    <string name="accept_sms_without_pin">Only accept commands containing valid Security PIN</string>
    <string name="info_about">%1$s (R)\nVersion: %2$s-%3$d.%4$s built on %5$s\nCopyright © 2010–%6$d GMS World\n%7$s installed on %8$s\n%9$s</string>
    <string name="admin_grant_explanation">Please grant this permissions to enable failed login notification service and lock screen command in Device Locator.</string>
    <string name="admin_grant_description">Device Locator can notify you on failed login, reset your device to factory defaults and lock screen</string>
    <string name="test">Test</string>
    <string name="notification_tracker">"Device Locator is tracking your device location. Click to open Device Locator"</string>
    <string name="activation_email_title">Email activation</string>
    <string name="activation_telegram_title">Telegram activation</string>
    <string name="activation_email_desc">In order to activate email notifications please enter 4 digit activation code we\'ve sent to your email address:</string>
    <string name="activation_telegram_desc">In order to activate Telegram notifications please enter 4 digit activation code we\'ve sent to your Telegram chat or channel:</string>
    <string name="login_dialog_desc">&lt;font color="#808080">It seems you haven\'t any accounts registered on this device. Do you want to register Device Locator account now?&lt;/font></string>
    <string name="your_devices">Your devices</string>
    <string name="device_manager">Device manager</string>
    <string name="device_sms_error">Device Locator is unable to send SMS message due to device error!</string>
    <string name="device_sms_permission_error">Device Locator is unable to send SMS message due to lack of SMS sending permission!</string>
    <string name="email_unverified_error">Device Locator is unable to sent notification because your email address is unverified. Please check your inbox for registration message from device-locator@gms-world.net</string>
    <string name="email_internal_error">Oops! Failed to sent email notification. Something went wrong on our side!</string>
    <string name="telegram_unverified_error">Device Locator is unable to sent notification because your chat or channel is unverified! Please register again your Telegram chat or channel.</string>
    <string name="telegram_invalid_id">Oops! Your Telegram chat or channel id seems to be wrong. Please register again your Telegram chat or channel!</string>
    <string name="telegram_internal_error">Oops! Failed to sent Telegram notification. Something went wrong on our side!</string>
    <string name="internal_error">Oops! Something went wrong on our side. Please try again!</string>
    <string name="pin_link">&lt;font color="#808080">If you forgot your Security PIN click &lt;a href="http://www.gms-world.net/">here&lt;/a>&lt;/font></string>
    <string name="pin_sent_ok">Security PIN has been sent to notifiers</string>
    <string name="pin_invalid">Invalid PIN!</string>
    <string name="pin_recover_ok">Please send this email message without modification and we will send you back your Security PIN</string>
    <string name="pin_recover_fail">Please first install email client on your device and try again!</string>
    <string name="pin_recover_mail_title">Security PIN from device %1$s recovery</string>
    <string name="pin_recover_mail_body">Please send me back Security PIN from device %1$s.\nRequest id: %2$s</string>
    <string name="fingerprint_invalid">Unrecognized fingerprint!</string>
    <string name="device_command_prompt">Select command</string>
    <string name="devices">Registered devices</string>
    <string name="device_map">Devices location</string>
    <string name="send_command_title">Send Command to Device</string>
    <string name="command">Command</string>
    <string name="device_security_pin">Device Security PIN</string>
    <string name="command_arguments">Command parameters</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_permissions">Permissions</string>
    <string name="device_permissions">Device permissions</string>
    <string name="app_permissions">Application permissions</string>
    <string name="other_permissions">Other permissions</string>
    <string name="DevicePolicyManager_ACTION_ADD_DEVICE_ADMIN">Allow failed device login notification service and Lock screen command</string>
    <string name="Settings_ACTION_MANAGE_OVERLAY_PERMISSION">Allow taking front camera photo after failed device login and with Photo command</string>
    <string name="Settings_ACTION_NOTIFICATION_POLICY_ACCESS_SETTINGS">Allow Mute device audio command</string>
    <string name="Manifest_permission_ACCESS_FINE_LOCATION">Allow route tracking service and Location command</string>
    <string name="Manifest_permission_SEND_SMS">Allow receiving SMS commands and sending SMS notifications</string>
    <string name="Manifest_permission_CAMERA">Allow taking front camera photo after failed device login and with Photo command</string>
    <string name="Manifest_permission_READ_CONTACTS">Only accept SMS commands sent from my contacts</string>
    <string name="Manifest_permission_CALL_PHONE">Allow to initiate phone call to Call command sender</string>
    <string name="Manifest_permission_USE_FINGERPRINT">Allow application authentication with fingerprint</string>
    <string name="Manifest_permission_GET_ACCOUNTS">Allow to list accounts registered on the device</string>
    <string name="Manifest_permission_READ_PHONE_STATE">Allow to read device IMEI number for device identification</string>
    <string name="reset_permission">Allow Reset device to factory defaults command</string>
    <string name="activation_code">Activation code</string>
    <string name="command_log">Command Log</string>
</resources>