<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tracker"
        android:title="@string/device_tracker"
        android:icon="@drawable/ic_place_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/sms"
        android:title="@string/sms_control"
        android:icon="@drawable/ic_textsms_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/devices"
        android:title="@string/devices"
        android:icon="@drawable/ic_devices_other_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/map"
        android:title="@string/device_map"
        android:icon="@drawable/ic_map_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/permissions"
        android:title="@string/title_activity_permissions"
        android:icon="@drawable/ic_settings_cell_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/commandLog"
        android:title="@string/command_log"
        android:icon="@drawable/baseline_enhanced_encryption_white"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/privacyPolicy"
        android:title="@string/privacy_policy"
        android:icon="@drawable/ic_format_list_bulleted_white"
        app:showAsAction="ifRoom|withText"/>
</menu>