<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/activationTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        style="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:text="@string/activation_email_title" />

    <TextView
        android:id="@+id/activationDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/activation_email_desc"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/activationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLength="4"
        android:maxLines="1"
        android:hint="@string/activation_code"
        android:inputType="numberPassword"
        android:layout_margin="8dp"
        android:textColor="@color/gray"/>
</LinearLayout>